--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,175 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  background-color: #f9d195;
+  padding: 0 20px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+}
+
+.container {
+  max-width: 987px;
+  margin: 0 auto;
+}
+header {
+  padding-top: 50px;
+}
+header .logo {
+  width: 350px;
+}
+header .user {
+  width: 24px;
+}
+.header_top {
+  position: relative;
+}
+.header_top-user {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.header_top-user span {
+  margin-left: 10px;
+}
+
+.header_menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+.header_menu li {
+  cursor: pointer;
+  text-transform: uppercase;
+  background-color: #fff;
+  width: 186px;height: 39px;
+  border: 1px solid #99e3ec;
+  font-size: 15px;
+}
+
+.header_menu li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+#main_slider {
+  margin-top: 40px;
+}
+#main_slider img {
+  max-height: 529px;
+  width: 100%;
+  object-fit: cover;
+}
+
+#second_slider {
+  margin-top: 30px;
+}
+.second_slider-img {
+  border: 7px solid #fff;
+  width: 234px;
+  height: 234px;
+}
+#second_slider img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+}
+.swiper-wrapper {
+  transition-timing-function: linear;
+}
+.slider {
+  overflow: hidden;
+}
+
+.about_inner {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 33px;
+}
+.about_inner-text {
+  max-width: 390px;
+  width: 100%;
+  text-align: center;
+}
+
+.about_inner img {
+  max-width: 447px;
+  width: 100%;
+}
+
+footer {
+  padding: 50px 0;
+}
+.footer_bot-bg,
+.footer_top-bg {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer_bot-bg img,
+.footer_top-bg img {
+  max-width: 448px;
+  width: 100%;
+  height: auto;
+}
+.footer_bot-bg svg,
+.footer_top-bg svg {
+  fill: #fff;
+  min-width: 39px;
+  height: 37px;
+  margin: 0 20px;
+}
+
+.footer_items {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 40px 0;
+}
+
+.footer_item {
+  max-width: 150px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer_item h4 {
+  font-size: 28px;
+  color: #68391A;
+  text-transform: uppercase;
+  margin: 10px 0;
+}
+
+.footer_item a + a {
+  margin-left: 5px;
+}
+.footer_item + .footer_item a {
+  font-size: 17px;
+  text-decoration: underline;
+}
