--- a/src/index.css
+++ b/src/index.css
@@ -198,11 +198,169 @@ header .user {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 10px;
+  padding-bottom: 20px;
   border-radius: 10px;
+}
+.modal_inner img {
+  width: 100%;
+}
+.modal_inner h2 {
+  padding: 0 10px;
+}
+.modal_inner p {
+  font-size: 16px;
+  margin: 5px 0;
+}
+.modal_wish textarea {
+  width: 100%;
+  height: 60px;
+  resize: none;
+}
+.modal_add-count button{
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+}
+.modal_add-count input {
+  height: 45px;
+  width: 70px;
+  display: block;
+}
+.modal_add-count {
+  display: flex;
+  align-items: center;
+}
+.modal_add-cart {
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.modal_add-cart a {
+  background-color: #67bdc7;
+  padding: 15px 20px;
+  color: #fff;
+}
+.modal_close {
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;      
+  font-family: cursive;
+}
+.modal_wish {
+  padding: 10px;
 }
 .order_item {
   cursor: pointer;
+}
+.total_sum {
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  color: #fff;
+  width: 55px;
+  display: inline;
+  padding: 0;
+  outline: none;
+}
+.cart {
+  cursor: pointer;
+  margin-top: 40px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.cart_number {
+  margin-left: 5px;
+}
+.cart_watch {
+  cursor: pointer;
+  margin: 0 auto;
+  width: fit-content;
+  padding: 10px 20px;
+  background-color: #67bdc7;
+  margin-top: 10px;
+  color: #fff;
+}
+.side_bar {
+  z-index: 1;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: block;
+}
+.side_bar-inner{
+  position: absolute;
+  right: 0;top: 0;
+  width: 400px;
+  background-color: #fff;
+  height: 100%;
+}
+.side_bar-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+.side_bar-top svg {
+  cursor: pointer;
+}
+.side_bar-item_left {
+  display: flex;
+  align-items: center;
+}
+.side_bar-item img {
+  width: 60px;
+}
+.side_bar-item {
+  padding: 10px 20px;
+  border-bottom: 1px solid #000;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 10px;
+}
+.side_bar-item_left button {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.side_bar-item_left input {
+  border: none;
+  width: 20px;
+  height: 30px;
+  text-align: center;
+}
+.side_bar-item_mid h3 {
+  font-size: 14px;
+}
+.side_bar-addition {
+  text-align: left;
+  padding: 20px;
+}
+.side_bar-addition p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+.side_bar-addition textarea {
+  width: 100%;
+  min-height: 50px;
+}
+.side_bar-tootal_sum {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 footer {
